@@ -663,6 +663,8 @@ Inside the bucardo database, the <b>bucardo_config</b> table holds many settings
 <tr>
 <td class="lcol" >syslog_facility</td> <td>LOG_LOCAL1</td> <td>Which syslog facility level to use</td> </tr>
 <tr>
+<td class="lcol" >warning_file</td> <td>bucardo.warning.log</td> <td>File containing all log lines starting with "Warning".</td> </tr>
+<tr>
 <td class="lcol" >kid_abort_limit</td> <td>3</td> <td>How many times we will restore an aborted kid before giving up?</td> </tr>
 <tr>
 <td class="lcol" >default_email_to</td> <td>nobody@example.com</td> <td>Who to send alert emails to</td> </tr>
