@@ -64,6 +64,8 @@
 
   - Do not attempt respawn of MCP if mcp_dbproblem_sleep is 0. [GSM]
 
+  - Add the "warning_file" config parameter to log all 'Warning' messages. [GSM]
+
 3.1.0 April 6, 2008
 
   - Fix race condition in bucardo_delta/bucardo_track updates 
